task2: fix dropdown showing behind cards

--- a/Task2/tickit/src/app/navbar/navbar.component.css
+++ b/Task2/tickit/src/app/navbar/navbar.component.css
@@ -1,7 +1,3 @@
-/* *{
-  border: 1px   solid   red;
-} */
-
 nav {
   margin: 0;
   padding: 20px 150px;
